# LocalCall

./: .gitignore  .project  AndroidManifest.xml
jni/: Android.mk  com_android_localcall_jni_rtp.cpp  com_android_localcall_jni_rtp.cpp.pre  com_android_localcall_jni_rtp.h  customrtp.cpp  customrtp.h  customrtpsession.cpp  customrtpsession.h  customspeex.cpp.pre
jni/jvoip/: ChangeLog  Makefile.in  README.TXT  configure  configure.in  copyheaderfiles.bat  jvoiplib.dsp  jvoiplib.dsw  jvoiplib.sln  jvoiplib.vcproj
jni/jvoip/doc/: Makefile.in  appendix1.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  manual.tex  preface.tex
jni/jvoip/doc/images/manual/chapter2/: base-component-class.dia  base-component-class.eps  change-session-params.dia  change-session-params.eps  class-jvoipcompression.dia  class-jvoipcompression.eps  class-jvoipcompressionmodule.dia  class-jvoipcompressionmodule.eps  class-jvoiplocalisation.dia  class-jvoiplocalisation.eps  class-jvoipmixer.dia  class-jvoipmixer.eps  class-jvoiptransmission.dia  class-jvoiptransmission.eps  class-jvoipvoiceinput.dia  class-jvoipvoiceinput.eps  class-jvoipvoiceoutput.dia  class-jvoipvoiceoutput.eps  create-session-schema.dia  create-session-schema.eps  overridable-functions.dia  overridable-functions.eps  register-userdef-functions.dia  register-userdef-functions.eps  send-and-receive-functions.dia  send-and-receive-functions.eps
jni/jvoip/doc/images/manual/chapter4/: class-jmutex.dia  class-jmutex.eps  class-jthread.dia  class-jthread.eps  class-jvoipsimpletimer.dia  class-jvoipsimpletimer.eps
jni/jvoip/examples/: changerate.cpp  ex3d.cpp  localsimple.cpp
jni/jvoip/lib/: .dummy
jni/jvoip/src/: Makefile.in  jvoipconfig.h  jvoipconfig_unix.h.in  jvoipconfig_win.h  jvoiperrors.cpp  jvoiperrors.h  jvoipexception.h  jvoipsession.cpp  jvoipsession.h  jvoipsessionparams.cpp  jvoipsessionparams.h  jvoipsigwait.cpp  jvoipsigwait.h  jvoipthread.cpp  jvoipthread.h  jvoiptypes.h
jni/jvoip/src/componentframework/: Makefile.in  location3d.h  sampleinput.h  sampleoutput.h  samplingtimer.h  transform3d.h  voiceblock.cpp  voiceblock.h  voicecall.cpp  voicecall.h  voicecompressor.h  voicedecompressor.h  voicemixer.h  voicetransmitter.h  voicetypes.h
jni/jvoip/src/libcomponents/: Makefile.in
jni/jvoip/src/libcomponents/base/: Makefile.in  jvoipcomponent.h  jvoipcomponentparams.h  jvoipcompression.cpp  jvoipcompression.h  jvoipcompressionmodule.h  jvoiplocalisation.h  jvoipmixer.h  jvoipsamplingtimer.h  jvoipsessionlocalisation.cpp  jvoipsessionlocalisation.h  jvoiptransmission.h  jvoipvoiceinput.h  jvoipvoiceoutput.h
jni/jvoip/src/libcomponents/impl/: Makefile.in  jvoipdpcmcompression.cpp  jvoipdpcmcompression.h  jvoipfileinput.cpp  jvoipfileinput.h  jvoipfileoutput.cpp  jvoipfileoutput.h  jvoipgsmcompression.cpp  jvoipgsmcompression.h  jvoiphrtfdata.cpp  jvoiphrtflocalisation.cpp  jvoiphrtflocalisation.h  jvoiplpccompression.cpp  jvoiplpccompression.h  jvoipnoinput.cpp  jvoipnoinput.h  jvoipnooutput.cpp  jvoipnooutput.h  jvoipnormalmixer.cpp  jvoipnormalmixer.h  jvoiprtptransmission.cpp  jvoiprtptransmission.h  jvoipsampleconverter.cpp  jvoipsampleconverter.h  jvoipsilencesuppression.cpp  jvoipsilencesuppression.h  jvoipsimplelocalisation.cpp  jvoipsimplelocalisation.h  jvoipsimpletimer.cpp  jvoipsimpletimer.h  jvoipspeexcompression.cpp  jvoipspeexcompression.h  jvoipulawcompression.cpp  jvoipulawcompression.h
jni/jvoip/src/libcomponents/impl/oss/: Makefile.in  jvoipsoundcardinput.cpp  jvoipsoundcardinput.h  jvoipsoundcardoutput.cpp  jvoipsoundcardoutput.h  jvoipsoundcardparams.cpp  jvoipsoundcardparams.h  jvoipsounddevdrvthread.cpp  jvoipsounddevdrvthread.h  jvoipsounddevice.cpp  jvoipsounddevice.h  jvoipsounddeviceblock.h  jvoipsounddevicedriver.cpp  jvoipsounddevicedriver.h
jni/jvoip/src/libcomponents/impl/win32/: jvoipmixerstatus.cpp  jvoipmixerstatus.h  jvoipsoundcardinput.cpp  jvoipsoundcardinput.h  jvoipsoundcardoutput.cpp  jvoipsoundcardoutput.h
jni/jvoip/testutil/: Makefile.in
jni/jvoip/testutil/MFC/: JVOIPTestUtil.cpp  JVOIPTestUtil.dsp  JVOIPTestUtil.dsw  JVOIPTestUtil.h  JVOIPTestUtil.rc  JVOIPTestUtil.sln  JVOIPTestUtil.vcproj  JVOIPTestUtilDlg.cpp  JVOIPTestUtilDlg.h  StdAfx.cpp  StdAfx.h  resource.h
jni/jvoip/testutil/MFC/res/: JVOIPTestUtil.rc2
jni/jvoip/testutil/Qt/: Makefile.in.in  aclocal.m4  configure  configure.in  jvoiptestutildlg.ui  jvoiptestutildlgimpl.cpp  jvoiptestutildlgimpl.h  main.cpp
jni/libjthread/src/: jmutex.cpp  jthread.cpp
res/drawable/: button_background.xml  button_shape.xml  button_shape_selected.xml  button_textcolor.xml  menu.xml
res/layout/: activity_call.xml  activity_dial.xml  activity_hot.xml  activity_main.xml  activity_welcome.xml  adapter_dial_item.xml  adapter_users_item.xml
res/values/: color.xml  dimens.xml  strings.xml  styles.xml
src/com/android/localcall/: BaseActivity.java  CallActivity.java  ConnectHotActivity.java  DialActivity.java  MainActivity.java  OpenHotActivity.java  SplashSpotActivity.java  WelcomeActivity.java
src/com/android/localcall/data/: BufferData.java  BufferDataExt.java  FrameBufferQueue.java  FrameBufferQueueExt.java  FrameBufferQueueNew.java
src/com/android/localcall/jni/: Rtp.java  Speex.java
src/com/android/localcall/service/: ILocalCallService.aidl  ILocalCallServiceCallback.aidl  LocalCallService.java  LocalCallServiceMgr.java
src/com/android/localcall/socket/: CtlServerSocket.java  CtlSocket.java  SocketExt.java
src/com/android/localcall/thirdpart/: BaiduStatisticController.java
src/com/android/localcall/utils/: AudioPlayer.java  AudioRecorder.java  AudioSync.java  CustomTimer.java  DEBUG.java  MultiCastReceiver.java  MultiCastSender.java  Utils.java  WifiAdmin.java  WifiApAdmin.java
src/com/android/localcall/view/: VolumeView.java
