AC_INIT(aclocal.m4) dnl a source file from your sub dir

AC_LANG_C++
AC_PATH_QT

JVOIPTESTUTIL_QTLIBDIR="$ac_qt_libraries"
JVOIPTESTUTIL_QTINCDIR="$ac_qt_includes"
JVOIPTESTUTIL_UIC="$UIC"
JVOIPTESTUTIL_MOC="$MOC"

AC_SUBST(JVOIPTESTUTIL_QTLIBDIR)
AC_SUBST(JVOIPTESTUTIL_QTINCDIR)
AC_SUBST(JVOIPTESTUTIL_UIC)
AC_SUBST(JVOIPTESTUTIL_MOC)
AC_OUTPUT( Makefile )
